%%{init: { 
    'theme': 'dark', 
    'themeVariables': { 
                        'background': '#121212', 
                        'lineColor': '#a5d7f7', 
                        'fontFamily': 'Cascadia Code, Fira Code, Consolas, Courier New, monospace', 
                        'fontSize': '14px' 
        }, 
        'themeCSS': 'path { stroke-width: 1.5px !important; }' 
    } }%%

classDiagram

class Inmueble {
  <<abstract>>
  - direccion: Direccion
  - ambientes: Ambiente[]
  - contacto: Contacto
  - observaciones: string
  - tieneGas: boolean
  - tieneCloaca: boolean
}

class Casa {
  - tieneQuincho: boolean
  - tienePileta: boolean
}

class Departamento {
  - piso: number
  - letra: string
  - admiteMascota: boolean
}

class Ambiente {
  - tipo: string
  - ancho: number
  - largo: number
  - esLuminoso: boolean
  + calcularM2(): number
}

class Direccion {
  - provincia: string
  - barrio: string
  - calle: string
  - altura: number
  - codigoPostal: string
  - esBarrioPrivado: boolean
}

class Contacto {
  - nombre: string
  - apellido: string
  - telefono: string
  - email: string
}

Inmueble <|-- Casa
Inmueble <|-- Departamento

Inmueble "1" --> "1" Direccion
Inmueble "1" --> "*" Ambiente
Inmueble "1" --> "1" Contacto

%%Colores de las clases
classDef default fill:#362b2b,stroke:#f39bce,color:#e4dcd2
